k8s/step2-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: microservices-payment:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50053
            - containerPort: 9103
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9103
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9103
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  selector:
    app: payment
  ports:
    - port: 50053
      targetPort: 50053
